--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "ntwitter": "~0.5.0",
     "sentiment": "~0.2.1",
-    "through": "~2.3.4"
+    "through": "~2.3.4",
+    "nconf": "~0.6.9"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
