--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
+    "angular": false,
     "describe": false,
     "it": false,
     "before": false,
