--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ntwitter": "~0.5.0",
     "sentiment": "~0.2.1",
     "through": "~2.3.4",
-    "nconf": "~0.6.9"
+    "nconf": "~0.6.9",
+    "express": "~3.4.6",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
